--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   body {
     min-height: 100vh; 
     font-family:
-      Arial, Helvetica, sans-serif; 
+      Montserrat;
     background: #f3f3f5; 
     color: #252b42; 
     /* display: flex;  */
@@ -68,7 +68,7 @@
 .bolu-hero {
   /* position: relative; */
   height: 600px;
-  background-image: url("assets/images/images/imagehero.jpg");
+  background-image: url("assets/images/imagehero.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -111,6 +111,15 @@
   opacity: 1;
   padding-top: 40px;
   padding-bottom: 40px;
+}
+.bolu-hero-content p{
+font-family: Montserrat;
+font-weight: 400;
+font-size: 20px;
+line-height: 30px;
+letter-spacing: 0.2px;
+text-align: center;
+
 }
 
 .bolu-avatar-stack {
@@ -188,7 +197,7 @@
 }
 
 .bolu-cards-0 {
-  background-image: url("assets/images/images/h5-baner-3\ 1.png");
+  background-image: url("assets/images/h5-baner-3\ 1.png");
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
@@ -234,7 +243,7 @@
   padding-left: 27px;
 }
 .bolu-cards-1 {
-  background-image: url(assets/images/images/apple.png);
+  background-image: url(assets/images/apple.png);
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
@@ -243,7 +252,7 @@
   border-radius: 10px;
 }
 .bolu-cards-2 {
-  background-image: url(assets/images/images/meat.png);
+  background-image: url(assets/images/meat.png);
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
@@ -288,7 +297,7 @@
   height: 300px;
   width: 348px;
   overflow: hidden;
-  background: url(assets/images/images/road.png);
+  background: url(assets/images/road.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -298,7 +307,7 @@
   height: 300px;
   width: 348px;
   overflow: hidden;
-  background: url(assets/images/images/car.png);
+  background: url(assets/images/car.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -308,7 +317,7 @@
   height: 300px;
   width: 348px;
   overflow: hidden;
-  background: url(assets/images/images/umbrella.png);
+  background: url(assets/images/umbrella.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -379,4 +388,24 @@
   color: #44a7e8;
   font-size: 14px;
   line-height: 1;
+}
+.bolu-div{
+  text-align: center;
+  margin-top: 60px;
+  font-family: Arial, sans-serif;
+}
+.bolu-div h6{
+color: #58c4dc;
+font-size: 16px;
+margin-bottom: 10px;
+}
+.bolu-div h3{
+  font-family: Montserrat;
+font-weight: 700;
+line-height: 50px;
+letter-spacing: 0.2px;
+text-align: center;
+  font-size: 45px;
+  font-weight: bold;
+  margin-bottom: 30px;
 }
