--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: "Montserrat", sans-serif;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
 }
 .main-container {
   max-width: 1440px;
@@ -306,3 +306,159 @@ h6 {
 }
 
 /* __________RESPONSIVENESS ENDS___________ */
+
+.footer {
+  background-color: #252b42;
+  color: rgba(250, 250, 250, 1);
+  /* max-width: 1440px; */
+  height: 488px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+
+.footer-container {
+  width: 100%;
+  max-width: 1100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 80px 20px 40px 20px;
+}
+
+/* TOP */
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-cta h2 {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.footer-cta p {
+  font-size: 14px;
+  color: #d0d0d0;
+}
+
+.contact-btn {
+  background-color: #23a6f0;
+  color: white;
+  border: none;
+  padding: 12px 30px;
+  border-radius: 6px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+/* MIDDLE */
+.footer-links {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.column h4 {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.column a,
+.column p {
+  font-size: 14px;
+  color: #d0d0d0;
+  text-decoration: none;
+}
+
+/* BOTTOM */
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 40px;
+  font-size: 14px;
+  color: #d0d0d0;
+}
+
+.socials i {
+  margin-left: 15px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+@media (max-width: 768px) {
+  .footer {
+    height: auto;
+  }
+
+  .footer-top {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+  }
+
+  .footer-links {
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+
+  .footer-bottom {
+    flex-direction: column;
+    gap: 15px;
+    text-align: center;
+  }
+}
+
+/* Bubble Magnify Effect 
+.blue:hover,
+.green:hover,
+.violet:hover,
+.dark:hover {
+  transform: scale(1.8) translateY(-4px);
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.25);
+}
+  */
+
+/* Hover triggers animation */
+.blue:hover,
+.green:hover,
+.violet:hover,
+.dark:hover {
+  animation: bubblePop 1s ease forwards infinite;
+  /* animation: bubblePop 1s ease-out; */
+}
+
+/* Keyframe Animation */
+@keyframes bubblePop {
+  0% {
+    transform: scale(1);
+  }
+
+  40% {
+    transform: scale(1.8) translateY(-4px);
+  }
+
+  70% {
+    transform: scale(0.95);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+.taiwo-brand {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgba(250, 250, 250, 1);
+  padding-left: 80px;
+  padding-right: 80px;
+}
